--- a/style.css
+++ b/style.css
@@ -1,68 +1,119 @@
-
-
-* {
-    border: 1px solid rgb(105, 105, 23);
-}
-
 html {
     height: 100vh;
 
 }
 
-
 body {
     display: flex;
     flex-direction: column;
-
-    
+        
 }
 
 header {
     background-color: #1f2937;
-}
-
-.top {
+    padding: 3px 45px;
     display: flex;
-    justify-content: space-around;
     align-items: center;
 }
 
 .logo {
+    height: auto;
     width: 63px;
-    flex-shrink: 0;
 }
 
 ul {
     display: flex;
-    list-style: none;
-    margin: 0px;
-    padding: 0px;
-    gap: 10px;
+    flex: auto;
+    margin-left: auto;
+    list-style-type: none;
+    justify-content: flex-end;
+    gap: 15px;
 }
 
-
-
-.top ul a{
+a {
     color: white;
     text-decoration: none;
 }
 
 
-.bottom {
-
-    margin: 0px auto;
+.media {
     display: flex;
-    gap: 15px;
-    flex: auto;
+    justify-content: flex-start;
+    padding: 65px 45px;
+    background-color: #1f2937;
+    gap: 20px;
+    flex-direction: row-reverse;
+    
 }
 
-.placeholder{
-   flex-grow: 1;
+.placeholder {
+    flex: 1;
+    background-color: gray;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    color: #f9faf8;
 }
 
 .hero {
+    flex: 1;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    flex-shrink: 1;
+    gap: 15px;
+}
+
+h1 {
+    font-size: 48px;
+    color: #f9faf8;
+    margin: 0px
+}
+
+.hero-text {
+    font-size: 18px;
+    color: #e5e7eb
+}
+
+.hero a {
+    background-color: #3882f6;
+    width: 7em;
+    border-radius: 8px;
+    font-size: 17px;
+    color: #f9faf8;
+    text-align: center;
+}
+
+h2 {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1f2937;
+    text-align: center;
+}
+
+li img {
+    height: auto;
+    max-width: 130px;
+    display: block;
+    padding: 0px;
+}
+
+li img {
+    padding: 0px;
+    display: flex;
+    margin: 0px;
+    text-align: center;
+}
+
+
+
+
+
+
+
+
+
+
+* {
+    border: 1px solid rgb(105, 105, 23);
+    
 }
