Save progress up to 'Some random information' section

--- a/style.css
+++ b/style.css
@@ -1,108 +1,65 @@
-html {
-    height: 100vh;
+<!DOCTYPE html>
+<html lang="en">
 
-}
+<head>
+    <meta charset="UTF-8">
+    <title>Welcome to the LANDING PAGE</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
-body {
-    display: flex;
-    flex-direction: column;
-        
-}
+<body>
+    <header>
+        <a href="index.html"><img class="logo" src="img/logo.png" alt="Logo"></a>
+        <ul>
+            <li class="header-link"><a href="https://www.theodinproject.com/paths">All Paths</a></li>
+            <li class="header-link"><a href="https://www.theodinproject.com/about">About</a></li>
+            <li class="header-link"><a href="why.html">Why should I join?!</a></li>
+        </ul>
+        </div>
+    </header>
+    <div class="media">
+        <div class="placeholder">this is a placeholder for an image
+        </div>
+        <div class="hero">
+            <h1>Kickstart your learning!</h1>
+            <div class="hero-text">Want to start building? <em>The Odin Project</em> will kickstart your learning and take you from <em>ZERO</em> to <strong>HERO!</strong> Work at your own pace and everything is free. What are you waiting for? Click the 'Sign up' button below and I'll see in <a class="discord" href="https://discord.gg/theodinproject"><strong>Discord!</strong></a></div>
+            <a href="https://www.theodinproject.com/sign_up" class="button">Sign up</a>
+        </div>
+    </div>
 
-header {
-    background-color: #1f2937;
-    padding: 3px 45px;
-    display: flex;
-    align-items: center;
-}
+    <div class="information">
+        <h2>What does The Odin Project offer?</h2>
+        <ul>
+            <div class="info">
+                <img src="img/html.png" alt="html logo">
+                <div class="info-text"><strong>HTML</strong> - You'll literally learn the <em>building blocks</em> of web development and you start from the beginning. You'll be able to make a boilerplate on day 1!
+                </div>
+            </div>
 
-.logo {
-    height: auto;
-    width: 63px;
-}
+            <div class="info">
+                <img src="img/css.png" alt="css logo">
+                <div class="info-text"><strong>CSS</strong> - It may be hard to believe, but this website was built using only Flexbox! Follow the curriculum and you'll be able to make something like this very soon!
+                </div>
+            </div>
 
-ul {
-    display: flex;
-    flex: auto;
-    margin-left: auto;
-    list-style-type: none;
-    justify-content: flex-end;
-    gap: 15px;
-}
+            
+            <div class="info">
+                <img src="img/github.png" alt="github logo">
+                <div class="info-text"><strong>GitHub</strong> - TOP will teach you how to use the best VCS in the game. Making commits will no longer be a chore, but a blessing! Start building your repository today!
+                </div>
+            </div>
+            <div class="info">
+                <img src="img/discord.png" alt="discord logo">
+                <div class="info-text"><strong>Discord</strong> - Have access to a community full of learners (and experts) willing to help. A passionate open source community is what makes TOP!
+                </div>
+            </div>
+        </ul>
 
-a {
-    color: white;
-    text-decoration: none;
-}
 
 
-.media {
-    display: flex;
-    justify-content: flex-start;
-    padding: 65px 45px;
-    background-color: #1f2937;
-    gap: 20px;
-    flex-direction: row-reverse;
+    </div>
+
     
-}
-
-.placeholder {
-    flex: 1;
-    background-color: gray;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    justify-content: center;
-    color: #f9faf8;
-}
-
-.hero {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-}
-
-h1 {
-    font-size: 48px;
-    color: #f9faf8;
-    margin: 0px
-}
-
-.hero-text {
-    font-size: 18px;
-    color: #e5e7eb
-}
-
-.hero a {
-    background-color: #3882f6;
-    width: 7em;
-    border-radius: 8px;
-    font-size: 17px;
-    color: #f9faf8;
-    text-align: center;
-}
-
-h2 {
-    font-size: 36px;
-    font-weight: 900;
-    color: #1f2937;
-    text-align: center;
-}
-
-li img {
-    height: auto;
-    max-width: 130px;
-    display: block;
-    padding: 0px;
-}
-
-li img {
-    padding: 0px;
-    display: flex;
-    margin: 0px;
-    text-align: center;
-}
 
 
 
@@ -110,10 +67,5 @@ li img {
 
 
 
-
-
-
-* {
-    border: 1px solid rgb(105, 105, 23);
-    
-}
+</body>
+</html>
